Fixed all the things and started writing.

--- a/thesis.tex
+++ b/thesis.tex
@@ -82,13 +82,14 @@
 
 %%% Thesis go!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\include{./chapters/ch1_introduction}
-	% \include{./chapters/ch2_hardware}
-	% \include{./chapters/ch3_software}
-	% \include{./chapters/ch4_modeling}
-	% \include{./chapters/ch5_gaitcontrol}
-	% \include{./chapters/ch6_navigation}
-	% \include{./chapters/ch7_closing_remarks}
+	\include{./chapters/introduction}
+	% \include{./chapters/platform}
+	% \include{./chapters/navigation}
+	% \include{./chapters/detector}
+	% \include{./chapters/crawl_gait}
+	% \include{./chapters/simulations}
+	% \include{./chapters/results}
+	% \include{./chapters/conclusion}
 	% \begin{appendices}
 	% 	\include{./chapters/appendix_e}
 	% 	\include{./chapters/appendix_a}
@@ -99,13 +100,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Thesis stop!
 
-%%% Who did I steal from
+%%% Who did I steal from?
 \addcontentsline{toc}{chapter}{References}
 \newpage
 	\begin{center}
 		\textbf{REFERENCES}
 	\end{center}
-\bibliographystyle{unsrt}
+\bibliographystyle{ieeetran}
 \bibliography{./chapters/refs}
 
 \end{document}
