--- a/thesis.tex
+++ b/thesis.tex
@@ -3,7 +3,7 @@
 %\mathindent 0pt
 
 %%% Use includeonly to pdf only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-\includeonly{./chapters/crawl_gait}
+\includeonly{./chapters/results_navigation}
 
 \input{./chapters/preamble}
 \input{epsf}
@@ -97,7 +97,7 @@
 	% \include{./chapters/detector}
 	\include{./chapters/crawl_gait}
 	% \include{./chapters/simulations}
-	% \include{./chapters/results}
+	\include{./chapters/results_navigation}
 	% \include{./chapters/conclusion}
 	% \begin{appendices}
 	% 	\include{./chapters/appendix_e}
