--- a/thesis.tex
+++ b/thesis.tex
@@ -3,8 +3,8 @@
 %\mathindent 0pt
 
 %%% Use includeonly to pdf only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-\includeonly{./chapters/results_navigation}
-% \includeonly{./chapters/results_crawl}
+% \includeonly{./chapters/results_navigation}
+\includeonly{./chapters/results_crawl}
 
 \input{./chapters/preamble}
 \input{epsf}
@@ -97,8 +97,8 @@
 	\include{./chapters/navigation}
 	\include{./chapters/crawl_gait}
 	% \include{./chapters/simulations}
-	\include{./chapters/results_navigation}
-	% \include{./chapters/results_crawl}
+	% \include{./chapters/results_navigation}
+	\include{./chapters/results_crawl}
 	% \include{./chapters/conclusion}
 	% \begin{appendices}
 	% 	\include{./chapters/appendix_e}
