--- a/thesis.tex
+++ b/thesis.tex
@@ -3,8 +3,7 @@
 %\mathindent 0pt
 
 %%% Use includeonly to pdf only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-% \includeonly{./chapters/results_navigation}
-\includeonly{./chapters/results_crawl}
+\includeonly{./chapters/platform}
 
 \input{./chapters/preamble}
 \input{epsf}
@@ -92,13 +91,13 @@
 
 %%% Thesis go!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\include{./chapters/introduction}
+	% \include{./chapters/introduction}
 	\include{./chapters/platform}
-	\include{./chapters/navigation}
-	\include{./chapters/crawl_gait}
+	% \include{./chapters/navigation}
+	% \include{./chapters/crawl_gait}
 	% \include{./chapters/simulations}
 	% \include{./chapters/results_navigation}
-	\include{./chapters/results_crawl}
+	% \include{./chapters/results_crawl}
 	% \include{./chapters/conclusion}
 	% \begin{appendices}
 	% 	\include{./chapters/appendix_e}
