Restructured chapter folders to make it easier to work on each piece.

--- a/thesis.tex
+++ b/thesis.tex
@@ -3,7 +3,7 @@
 %\mathindent 0pt
 
 %%% Use includeonly to pdf only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-\includeonly{./chapters/platform}
+\includeonly{./chapters/platform/platform}
 
 \input{./chapters/preamble}
 \input{epsf}
@@ -92,7 +92,7 @@
 %%% Thesis go!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%\include{./chapters/introduction}
-	\include{./chapters/platform}
+	\include{./chapters/platform/platform}
 	% \include{./chapters/navigation}
 	% \include{./chapters/crawl_gait}
 	% \include{./chapters/simulations}
