--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,8 @@
-% \documentstyle[amsmath,epic,eepic,graphicx,tabularx,cite,subfig,caption,appendix,algorithm,algorithmicx,algpseudocode,amssymb,listings,color,afterpage]{poly3}
 \documentstyle[epic,eepic,graphicx,tabularx,tabulary,multirow,mathtools,cite,subfig,caption,appendix,algorithm,algorithmicx,algpseudocode,amssymb,listings,color,afterpage,placeins,url]{poly3}
 %\mathindent 0pt
 
 %%% Use includeonly to pdf only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-\includeonly{./chapters/platform/platform}
+%\includeonly{./chapters/platform/platform}
 
 \input{./chapters/preamble}
 \input{epsf}
@@ -74,10 +73,10 @@
 \setcounter{page}{1}
 \pagenumbering{roman}
 \include{./chapters/vita}
-\include{./chapters/publications}
+%\include{./chapters/publications}
 \include{./chapters/acknowledgements}
 \include{./chapters/dedications}
-\include{./chapters/abstract}
+%\include{./chapters/abstract}
 
 \normalsize
 %%% Comment out below when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
@@ -93,11 +92,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	%\include{./chapters/introduction}
 	\include{./chapters/platform/platform}
-	% \include{./chapters/navigation}
-	% \include{./chapters/crawl_gait}
+	\include{./chapters/navigation/navigation}
+	\include{./chapters/crawl/crawl_gait}
 	% \include{./chapters/simulations}
-	% \include{./chapters/results_navigation}
-	% \include{./chapters/results_crawl}
+	\include{./chapters/results/navigation/results_navigation}
+	\include{./chapters/results/crawl/results_crawl}
 	% \include{./chapters/conclusion}
 	% \begin{appendices}
 	% 	\include{./chapters/appendix_e}
