Minor corrections and updates to the bib.

--- a/thesis.tex
+++ b/thesis.tex
@@ -2,17 +2,17 @@
 %\mathindent 0pt
 
 %%% Use includeonly to pdf only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-%\includeonly{./chapters/platform/platform}
+\includeonly{./chapters/platform/platform}
 
 \input{./chapters/preamble}
-\input{epsf}
+%\input{epsf}
 
 % Override the double parenthesis
 \newtagform{defaultoveride}{}{}
 \usetagform{defaultoveride}
 
 % Set default code formatting scheme
-\include{./chapters/code_formatting}
+%\include{./chapters/code_formatting}
 % Set path for images
 \graphicspath{{./pictures/}}
 
@@ -38,12 +38,12 @@
 
 \begin{document}
 %%% Comment out below when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-% \title{DOING THINGS WITH THE NAO :\\LIKE LASERS AND STUFF}
-% \author{Griswald Brooks}
-% \date{July, 2015}
-% \committee{1}
+\title{Projected Profile Humanoid Crawl Gait and Lidar Based Navigation using GODZILA}
+\author{Griswald Brooks}
+\date{November, 2016}
+\committee{1}
 
-% \mstitlepage
+%\mstitlepage
 %%% Comment out above when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
 
 \topmargin=0.4in
@@ -72,17 +72,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \setcounter{page}{1}
 \pagenumbering{roman}
-\include{./chapters/vita}
+%\include{./chapters/vita}
 %\include{./chapters/publications}
-\include{./chapters/acknowledgements}
-\include{./chapters/dedications}
+%\include{./chapters/acknowledgements}
+%\include{./chapters/dedications}
 %\include{./chapters/abstract}
 
 \normalsize
 %%% Comment out below when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-% \tableofcontents
-% \listoffigures
-% \listoftables
+%\tableofcontents
+%\listoffigures
+%\listoftables
 %%% Comment out above when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
 \newpage
 \setcounter{page}{1}
@@ -110,30 +110,14 @@
 
 %%% Who did I steal from?
 %%% Comment out below when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-% \addcontentsline{toc}{chapter}{References}
-% \newpage
-% 	\begin{center}
-% 		\textbf{REFERENCES}
-% 	\end{center}
-% \bibliographystyle{ieeetran}
-% \bibliography{./chapters/refs}
+%\addcontentsline{toc}{chapter}{References}
+%\newpage
+%	\begin{center}
+%		\textbf{REFERENCES}
+%	\end{center}
+%\bibliographystyle{ieeetran}
+%\bibliographystyle{plain}
+%\bibliography{./chapters/refs}
 %%% Comment out above when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
 
 \end{document}
-
-% introduction
-% platform - 
-
-% navigation - 1
-% 	mention that one aspect of navigation is vertically constrained spaces, connect to next chapter
-% crawl gait - 2
-% 	mention how crawling and navigation can be coupled, with simulation explanation
-
-% simulations (contains simulation results of obstacle avoidance, OA with crawling, crawling sim)(consider putting it in upper chapters)
-
-% results
-% 	lidar based OA
-% 	lidar based crawlspace detection
-% 	crawl gait
-
-% conclusion
