--- a/thesis.tex
+++ b/thesis.tex
@@ -2,7 +2,7 @@
 %\mathindent 0pt
 
 %%% Use includeonly to pdf only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-\includeonly{./chapters/crawl/crawl_gait}
+\includeonly{./chapters/conclusion}
 
 \input{./chapters/preamble}
 %\input{epsf}
@@ -90,14 +90,13 @@
 
 %%% Thesis go!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	%\include{./chapters/introduction}
+	\include{./chapters/introduction}
 	\include{./chapters/platform/platform}
 	\include{./chapters/navigation/navigation}
 	\include{./chapters/crawl/crawl_gait}
-	% \include{./chapters/simulations}
 	\include{./chapters/results/navigation/results_navigation}
 	\include{./chapters/results/crawl/results_crawl}
-	% \include{./chapters/conclusion}
+	\include{./chapters/conclusion}
 	% \begin{appendices}
 	% 	\include{./chapters/appendix_e}
 	% 	\include{./chapters/appendix_a}
