Started to outline new structure in intro.

--- a/thesis.tex
+++ b/thesis.tex
@@ -2,7 +2,7 @@
 %\mathindent 0pt
 
 %%% Use includeonly to pdf only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-\includeonly{./chapters/conclusion}
+\includeonly{./chapters/introduction/introduction}
 
 \input{./chapters/preamble}
 %\input{epsf}
@@ -90,7 +90,7 @@
 
 %%% Thesis go!
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\include{./chapters/introduction}
+	\include{./chapters/introduction/introduction}
 	\include{./chapters/platform/platform}
 	\include{./chapters/navigation/navigation}
 	\include{./chapters/crawl/crawl_gait}
