First draft of intro.

--- a/thesis.tex
+++ b/thesis.tex
@@ -109,14 +109,14 @@
 
 %%% Who did I steal from?
 %%% Comment out below when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-\addcontentsline{toc}{chapter}{References}
-\newpage
-	\begin{center}
-		\textbf{REFERENCES}
-	\end{center}
-%\bibliographystyle{ieeetran}
-\bibliographystyle{plain}
-\bibliography{./chapters/refs}
+%\addcontentsline{toc}{chapter}{References}
+%\newpage
+%	\begin{center}
+%		\textbf{REFERENCES}
+%	\end{center}
+%%%%\bibliographystyle{ieeetran}
+%\bibliographystyle{plain}
+%\bibliography{./chapters/refs}
 %%% Comment out above when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
 
 \end{document}
