Started abstract, updated vita, and school name.

--- a/poly3.sty
+++ b/poly3.sty
@@ -378,13 +378,13 @@
         at the\\
         \vspace{2mm}
         NEW YORK UNIVERSITY\\
-        POLYTECHNIC SCHOOL OF ENGINEERING\\
+        TANDON SCHOOL OF ENGINEERING\\
   \vspace{6mm}
   by\\
   \vspace{6mm}
   \@author \\
   \vspace{4mm}
-  July 2015
+  December 2016
   \end{center}
 \newpage}
 
@@ -402,13 +402,13 @@
         at the\\
         \vspace{2mm}
         NEW YORK UNIVERSITY\\
-        POLYTECHNIC SCHOOL OF ENGINEERING\\
+        TANDON SCHOOL OF ENGINEERING\\
   \vspace{6mm}
 	by\\
   \vspace{5mm}
 	\@author \\
   \vspace{5mm}
-  July 2015
+  December 2016
 	\end{center}\vskip 20pt 
 \hspace{245pt}
 \begin{minipage}[t]{185pt}
@@ -489,7 +489,7 @@ University ID:    \hspace{0.10mm}\noindent\underline{\makebox[2.0in][l]{\hspace{
       the Degree of Master of Science (Electrical Engineering)
     }\\
     \vspace{12mm}
-    {\bf July 2015}
+    {\bf December 2016}
     \vspace{8mm}
 \end{center}
 }
