Added periods in vita and capitalized U in using in title.

--- a/thesis.tex
+++ b/thesis.tex
@@ -38,7 +38,7 @@
 
 \begin{document}
 %%% Comment out below when pdfing only one chapter %%% <-------------------------------------------------------------------------------------------------------------
-\title{Projected Profile Humanoid Crawl Gait and Lidar Based Navigation using GODZILA}
+\title{Projected Profile Humanoid Crawl Gait and Lidar Based Navigation Using GODZILA}
 \author{Griswald Brooks}
 \date{December 2016}
 \committee{1}
