--- a/poly3.sty
+++ b/poly3.sty
@@ -384,7 +384,7 @@
   \vspace{6mm}
   \@author \\
   \vspace{4mm}
-  December 2016
+  January 2017
   \end{center}
 \newpage}
 
@@ -408,7 +408,7 @@
   \vspace{5mm}
 	\@author \\
   \vspace{5mm}
-  December 2016
+  January 2017
 	\end{center}\vskip 20pt 
 \hspace{245pt}
 \begin{minipage}[t]{185pt}
@@ -425,8 +425,8 @@
 
 \vspace{-5mm}
 \begin{flushleft}
-Copy No.          \hspace{8.25mm}\noindent\underline{\makebox[2.0in][l]{\hspace{10pt}\# \@committee}}\\
 University ID:    \hspace{0.10mm}\noindent\underline{\makebox[2.0in][l]{\hspace{10pt}N17150539}}\\
+Net ID:           \hspace{8.25mm}\noindent\underline{\makebox[2.0in][l]{\hspace{10pt}gwb225}}\\
 \end{flushleft}
 }
 
@@ -489,7 +489,7 @@ University ID:    \hspace{0.10mm}\noindent\underline{\makebox[2.0in][l]{\hspace{
       the Degree of Master of Science (Electrical Engineering)
     }\\
     \vspace{12mm}
-    {\bf December 2016}
+    {\bf January 2017}
     \vspace{8mm}
 \end{center}
 }
